--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shlack/utils",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
@@ -13,9 +13,9 @@
     "build": "scripty"
   },
   "dependencies": {
+    "@shlack/types": "^0.0.2-alpha.0",
     "date-fns": "^2.16.1",
-    "react": "^17.0.1",
-    "@shlack/types": "^0.0.1"
+    "react": "^17.0.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.11.0",
